# cocoindex

./: .env.lib_debug  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  check.sh  pyproject.toml  ruff.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
.github/scripts/: update_version.sh
.github/workflows/: CI.yml  _doc_release.yml  _test.yml  docs.yml  format.yml  release.yml
dev/: neo4j.yaml  postgres.yaml
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: query.mdx
docs/docs/about/: community.md  contributing.md
docs/docs/ai/: llm.mdx
docs/docs/core/: basics.md  cli.mdx  custom_function.mdx  data_types.mdx  flow_def.mdx  flow_methods.mdx  initialization.mdx  settings.mdx
docs/docs/getting_started/: installation.md  overview.md  quickstart.md
docs/docs/ops/: functions.md  sources.md  storages.md  targets.md
docs/src/css/: custom.css
docs/src/theme/: Root.js
examples/amazon_s3_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/amazon_s3_text_embedding/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
examples/azure_blob_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/code_embedding/: README.md  code_embedding.py  main.py  pyproject.toml
examples/docs_to_kg/: README.md  main.py  pyproject.toml
examples/docs_to_kg/markdown_files/: 1810.04805v2.md  rfc8259.md
examples/docs_to_knowledge_graph/: .env  README.md  main.py  pyproject.toml
examples/face_recognition/: README.md  main.py  pyproject.toml
examples/fastapi_server_docker/: .env  README.md  compose.yaml  dockerfile  main.py  requirements.txt
examples/fastapi_server_docker/sample_code/: main.py
examples/fastapi_server_docker/src/: cocoindex_funs.py
examples/gdrive_text_embedding/: .env.example  README.md  main.py  pyproject.toml
examples/gdrive_text_embedding/data/: 1706.03762v7.docx  1810.04805v2.docx
examples/image_search/: .env  README.md  main.py  pyproject.toml  requirements.txt
examples/image_search/frontend/: index.html
examples/image_search_example/: README.md  main.py  requirements.txt
examples/image_search_example/frontend/: package-lock.json  package.json
examples/image_search_example/frontend/src/: App.jsx  style.css
examples/manual_extraction/: README.md  manual_extraction.py  pyproject.toml
examples/manuals_llm_extraction/: README.md  main.py  pyproject.toml
examples/paper_metadata/: README.md  main.py  pyproject.toml
examples/patient_intake_extraction/: .env.example  README.md  main.py  pyproject.toml
examples/patient_intake_extraction/data/: README.md
examples/patient_intake_extraction/data/patient_forms/: Patient_Intake_Form_David_Artificial.docx  Patient_Intake_From_Jane_Artificial.docx
examples/pdf_embedding/: README.md  main.py  pdf_embedding.py  pyproject.toml
examples/product_recommendation/: README.md  main.py  pyproject.toml
examples/product_recommendation/products/: p1.json  p2.json  p3.json  p4.json  p6.json  p7.json  p8.json  p9.json
examples/product_taxonomy_knowledge_graph/: .env  README.md  main.py  pyproject.toml
examples/product_taxonomy_knowledge_graph/crawled_products/: product_1028.json  product_1385.json  product_1423.json  product_15.json  product_1880.json  product_191.json  product_194.json  product_424.json  product_45.json  product_465.json  product_570.json  product_587.json  product_750.json  product_880.json  product_929.json
examples/product_taxonomy_knowledge_graph/products/: p2.json  p3.json  p4.json  p5.json  p7.json  p8.json
examples/text_embedding/: README.md  Text_Embedding.ipynb  main.py  pyproject.toml  text_embedding.py
examples/text_embedding/markdown_files/: 1706.03762v7.md  rfc8259.md
examples/text_embedding_qdrant/: README.md  main.py  pyproject.toml
examples/text_embedding_qdrant/markdown_files/: rfc8259.md
python/cocoindex/: __init__.py  auth_registry.py  cli.py  convert.py  flow.py  functions.py  index.py  lib.py  llm.py  op.py  query.py  runtime.py  setting.py  setup.py  sources.py  storages.py  targets.py  typing.py  utils.py  vector.py
python/cocoindex/tests/: test_content_hash.py  test_convert.py  test_optional_database.py  test_typing.py
src/: lib.rs  lib_context.rs  prelude.rs  py.rs  server.rs  settings.rs
src/base/: duration.rs  field_attrs.rs  json_schema.rs  mod.rs  schema.rs  spec.rs  value.rs
src/builder/: analyzed_flow.rs  analyzer.rs  exec_ctx.rs  flow_builder.rs  mod.rs  plan.rs
src/execution/: db_tracking.rs  db_tracking_setup.rs  dumper.rs  evaluator.rs  fingerprint.rs  indexer.rs  indexing_status.rs  live_updater.rs  memoization.rs  mod.rs  query.rs  row_indexer.rs  source_indexer.rs  stats.rs  synchronizer.rs
src/llm/: anthropic.rs  client.rs  gemini.rs  litellm.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  vllm.rs  voyage.rs
src/ops/: factory_bases.rs  interface.rs  mod.rs  py_factory.rs  registration.rs  registry.rs  sdk.rs
src/ops/functions/: embed_text.rs  extract_by_llm.rs  extract_by_mistral.rs  mod.rs  parse_json.rs  split_recursively.rs  test_utils.rs
src/ops/sources/: amazon_s3.rs  azure_blob.rs  google_drive.rs  local_file.rs  mod.rs
src/ops/storages/: kuzu.rs  mod.rs  neo4j.rs  postgres.rs  qdrant.rs  spec.rs
src/ops/storages/shared/: property_graph.rs  table_columns.rs
src/ops/targets/: kuzu.rs  mod.rs  neo4j.rs  postgres.rs  qdrant.rs
src/ops/targets/shared/: mod.rs  property_graph.rs  table_columns.rs
src/py/: convert.rs  mod.rs
src/service/: error.rs  flows.rs  mod.rs  search.rs
src/setup/: auth_registry.rs  components.rs  db_metadata.rs  driver.rs  mod.rs  states.rs
src/utils/: concur_control.rs  db.rs  fingerprint.rs  immutable.rs  mod.rs  retriable.rs  retryable.rs  yaml_ser.rs
