[package]
name = "cocoindex"
# Version used for local development is always higher than others to take precedence.
# Will be overridden for specific release versions.
version = "999.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cocoindex_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5" }
anyhow = { version = "1.0.97", features = ["std"] }
async-trait = "0.1.87"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["query"] }
base64 = "0.22.1"
chrono = "0.4.40"
config = "0.14.1"
const_format = "0.2.34"
futures = "0.3.31"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.44.0", features = [
    "macros",
    "rt-multi-thread",
    "full",
    "tracing",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
indexmap = { version = "2.8.0", features = ["serde"] }
blake2 = "0.10.6"
pgvector = { version = "0.4.0", features = ["sqlx"] }
indenter = "0.3.3"
itertools = "0.14.0"
derivative = "2.2.0"
async-lock = "3.4.0"
hex = "0.4.3"
pythonize = "0.23.0"
schemars = "0.8.22"
openssl = { version = "0.10.71", features = ["vendored"] }
console-subscriber = "0.4.1"
env_logger = "0.11.7"
