[project]
name = "cocoindex-face-recognition-example"
version = "0.1.0"
description = "Build index for papers with both metadata and content embeddings"
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.1.71",
    "face-recognition>=1.3.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
]

[tool.setuptools]
packages = []
