[project]
name = "text-embedding-qdrant"
version = "0.1.0"
description = "Simple example for cocoindex: build embedding index based on local text files."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.1.52",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.6.0",
]

[tool.setuptools]
packages = []
